--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "dotenv": "^16.0.2",
     "router": "^1.3.7",
     "vue": "^2.6.14",
     "vue-axios": "^3.4.1",
